force-app/main/default/objects/vendor__c/vendor__c.object-meta.xml
<CustomObject>
    <label>Vendor</label>
    <nameField>
        <label>Vendor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>vendors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>