force-app/main/default/objects/vendor__c/fields/Standerd_Pricing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Standerd_Pricing_Notes__c</fullName>
    <label>Standerd Pricing Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>