force-app/main/default/objects/vendor__c/validationRules/Quality_Rating_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Quality_Rating_Range</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    Quality_Rating__c &lt; 1,
    Quality_Rating__c &gt; 5
)</errorConditionFormula>
    <errorDisplayField>Quality_Rating__c</errorDisplayField>
    <errorMessage>Quality Rating must be between 1 and 5</errorMessage>
</ValidationRule>